--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,26 @@
 useDynLib(eco)
 
-export(eco, summary.eco, print.summary.eco)
+importFrom(MASS, mvrnorm)
 
+export(
+       eco, 	
+       ecoBD,
+       ecoNP,
+       summary.eco,
+       summary.ecoNP,
+       print.summary.eco,
+       print.summary.ecoNP,
+       predict.eco)
+
+S3method(varcov, eco)
+S3method(coef, eco)
+S3method(predict, eco)
 S3method(summary, eco)
+S3method(summary, ecoNP)
+S3method(summary, predict.eco)
+S3method(print, eco)
+S3method(print, ecoBD)
 S3method(print, summary.eco)
+S3method(print, summary.ecoNP)
+S3method(print, summary.predict.eco)
+
