--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: eco
-Version: 2.1-1
-Date: 2005-07-06
+Version: 2.2-1
+Date: 2005-09-28
 Title: R Package for Fitting Bayesian Models of Ecological Inference in 2x2 Tables
 Author: Kosuke Imai <kimai@princeton.edu>,
         Ying Lu <ylu@iq.harvard.edu>.
@@ -10,9 +10,9 @@ Description: eco is a publicly available R package that fits the
              parametric and nonparametric Bayesian models for
              ecological inference in 2x2 tables. The models are fit
              using the Markov chain Monte Carlo algorithms that are
-             described in Imai and Lu (2004).
+             described in Imai and Lu (2004, 2005).
 LazyLoad: yes
 LazyData: yes
 License: GPL (version 2 or later)
-URL: http://www.princeton.edu/~kimai/research/eco.html
-Packaged: Wed Jul  6 16:37:17 2005; kimai
+URL: http://imai.princeton.edu/research/eco.html
+Packaged: Thu Sep 29 20:44:14 2005; kimai
