--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: eco
-Version: 3.1-4
-Date: 2009-07-12
+Version: 3.1-5
+Date: 2011-04-26
 Title: R Package for Ecological Inference in 2x2 Tables
 Author: Kosuke Imai <kimai@princeton.edu>, Ying Lu <yl46@nyu.edu>,
         Aaron Strauss <abstraus@Princeton.EDU>.
@@ -24,6 +24,6 @@ LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
 URL: http://imai.princeton.edu/software/eco.html
-Packaged: 2009-07-13 01:26:09 UTC; ying
+Packaged: 2011-04-26 11:15:21 UTC; kimai
 Repository: CRAN
-Date/Publication: 2009-07-18 15:41:13
+Date/Publication: 2011-04-26 11:50:22
