--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,29 +1,29 @@
 Package: eco
-Version: 3.1-6
-Date: 2012-5-29
-Title: R Package for Ecological Inference in 2x2 Tables
-Author: Kosuke Imai <kimai@princeton.edu>, Ying Lu <yl46@nyu.edu>,
-        Aaron Strauss <abstraus@Princeton.EDU>.
+Version: 3.1-7
+Date: 2015-3-4
+Title: Ecological Inference in 2x2 Tables
+Author: Kosuke Imai <kimai@princeton.edu>,
+        Ying Lu <yl46@nyu.edu>,
+	Aaron B Strauss <aaronbstrauss@gmail.com>.
 Maintainer: Ying Lu <yl46@nyu.edu>
 Depends: R (>= 2.0), MASS, utils
-Description: eco is a publicly available R package that implements the
-        Bayesian and likelihood methods proposed in Imai, Lu, and
-        Strauss (2008) for ecological inference in $2 \times 2$ tables
-        as well as the method of bounds introduced by Duncan and Davis
-        (1953).  The package fits both parametric and nonparametric
-        models using either the Expectation-Maximization algorithms
-        (for likelihood models) or the Markov chain Monte Carlo
-        algorithms (for Bayesian models).  For all models, the
-        individual-level data can be directly incorporated into the
-        estimation whenever such data are available.  Along with
-        in-sample and out-of-sample predictions, the package also
-        provides a functionality which allows one to quantify the
-        effect of data aggregation on parameter estimation and
-        hypothesis testing under the parametric likelihood models.
+Description: We implement the Bayesian and likelihood methods proposed 
+  in Imai, Lu, and Strauss (2008, 2011) for ecological inference in 2 
+  by 2 tables as well as the method of bounds introduced by Duncan and 
+  Davis (1953).  The package fits both parametric and nonparametric 
+  models using either the Expectation-Maximization algorithms (for 
+  likelihood models) or the Markov chain Monte Carlo algorithms (for 
+  Bayesian models).  For all models, the individual-level data can be 
+  directly incorporated into the estimation whenever such data are available.
+  Along with in-sample and out-of-sample predictions, the package also
+  provides a functionality which allows one to quantify the effect of data
+  aggregation on parameter estimation and hypothesis testing under the
+  parametric likelihood models.
 LazyLoad: yes
 LazyData: yes
 License: GPL (>= 2)
 URL: http://imai.princeton.edu/software/eco.html
-Packaged: 2012-05-29 15:44:23 UTC; kimai
+Packaged: 2015-03-05 04:04:38 UTC; kimai
+NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2012-06-12 06:36:54
+Date/Publication: 2015-03-19 09:46:08
